[package]
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2021"
name = "foxlib"
publish = false
version = "0.1.0"

[features]
default = []
hash = ["image", "img_hash"]
jobs = ["faktory"]

[dependencies]
chrono = "0.4.23"
faktory = {version = "0.12.1", optional = true}
hyper = {version = "0.14.24", features = ["http1", "tcp", "server"]}
image = {version = "0.23.14", optional = true}
img_hash = {version = "3.2.0", optional = true}
lazy_static = "1.4.0"
opentelemetry = {version = "0.18.0", features = ["rt-tokio"]}
opentelemetry-http = "0.7.0"
opentelemetry-jaeger = "0.17.0"
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"
prometheus = {version = "0.13.3", features = ["process"]}
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["rt-multi-thread"]}
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.18.0"
tracing-serde = "0.1.3"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "json"]}
