[package]
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2021"
name = "foxlib"
publish = false
version = "0.1.0"

[features]
default = []
hash = ["image", "img_hash"]
jobs = ["faktory"]

flags = ["unleash-api-client", "enum-map", "uuid"]
flags-openssl = ["reqwest/default-tls", "unleash-api-client/reqwest-client"]
flags-rustls = [
    "reqwest/rustls-tls",
    "unleash-api-client/reqwest-client-rustls",
]

[dependencies]
chrono = "0.4.23"
enum-map = { version = "2.0.3", optional = true }
faktory = { version = "0.12.1", optional = true }
hyper = { version = "0.14.24", features = ["http1", "tcp", "server"] }
image = { version = "0.23.14", optional = true }
img_hash = { version = "3.2.0", optional = true }
lazy_static = "1.4.0"
opentelemetry = "0.21.0"
opentelemetry-http = "0.10.0"
opentelemetry-jaeger = "0.20.0"
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.13.0"
prometheus = { version = "0.13.3", features = ["process"] }
reqwest = { version = "0.11.14", optional = true, default-features = false }
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.22.0"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
unleash-api-client = { version = "0.10.1", optional = true, default-features = false }
uuid = { version = "1.3.0", features = ["v4"], optional = true }
