[package]
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2021"
name = "foxlib"
publish = false
version = "0.1.0"

[features]
default = []
hash = ["image", "image_hasher"]
jobs = ["faktory"]

flags = ["unleash-api-client", "enum-map", "uuid"]
flags-openssl = ["reqwest/default-tls", "unleash-api-client/reqwest-client"]
flags-rustls = [
    "reqwest/rustls-tls",
    "unleash-api-client/reqwest-client-rustls",
]

[dependencies]
chrono = "0.4.23"
enum-map = { version = "2.0.3", optional = true }
faktory = { version = "0.12.1", optional = true }
hyper = { version = "0.14.24", features = ["http1", "tcp", "server"] }
image = { version = "0.25.0", optional = true }
image_hasher = { version = "2.0.0", optional = true }
lazy_static = "1.4.0"
opentelemetry = "0.23.0"
opentelemetry-http = "0.12.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.15.0"
prometheus = { version = "0.13.3", features = ["process"] }
reqwest = { version = "0.11.14", optional = true, default-features = false }
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.24.0"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
unleash-api-client = { version = "0.10.1", optional = true, default-features = false }
uuid = { version = "1.3.0", features = ["v4"], optional = true }
